--- a/index.html
+++ b/index.html
@@ -1,30 +1,58 @@
+<!DOCTYPE html>
 <html>
 
 <head>
+  <meta charset="utf -8">
+  <title>Calculator</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-<!--Made container with green background -->
-  <div class = "container">
-<!--  Created lists of numbers -->
-  <div class="numbers_column1">
-    <ul class="nobullets1">
-      <li>C</li>
-      <li>7</li>
-      <li>4</li>
-      <li>1</li>
-      <li>0</li>
-    </ul>
-<!--<div class="numbers_column2">
-      <ul class="nobullets2">
-        <li>8</li>
-        <li>5</li>
-        <li>2</li>
-        <li>.</li>
-      </ul>
 
- -->
+  <!-- Beginning of the calculator. Created a Form along with table, table head, table row, table data and buttons -->
+
+  <form id="maincalculator">
+    <table id="calculatorlayout">
+
+      <thead><button class="number" type="button" value="C">C</button</th>
+
+      <th colspan="3"><div type="text" name="display" id="display" value=""></div></th>
+
+<!-- Buttons 7, 8, 9 and / are created here... -->
+      <tr class="row1">
+      <td><button class="number" type="button" sum="7">7</button></td>
+      <td><button class="number" type="button" sum="8">8</button></td>
+      <td><button class="number" type="button" sum="9">9</button></td>
+      <td><button class="number" type="button" sum="/">/</button></td>
+    </tr>
+<!-- Buttons 4, 5, 6, and * created here... -->
+    <tr class="row2">
+      <td><button class="number" type="button" sum="4">4</button></td>
+      <td><button class="number" type="button" sum="5">5</button></td>
+      <td><button class="number" type="button" sum="6">6</button></td>
+      <td><button class="number" id="multiplyer" type="button" name="multiplyer" value="*">*</button></td>
+    </tr>
+<!-- Buttons 1, 2, 3, and - are here... -->
+<tr class="row3">
+      <td><button class="number" type="button" sum="1">1</button></td>
+      <td><button class="number" type="button" sum="2">2</button></td>
+      <td><button class="number" type="button" sum="3">3</button></td>
+      <td><button class="number" id="subtractor" type="button" name="subtractor" value="-">-</button></td>
+    </tr>
+<!-- Buttons 0, ., =, and + are here... -->
+    <tr class="row4">
+      <td><button class="number" type="button" value="0">0</button></td>
+      <td><button class="number" type="button" value=".">.</button></td>
+      <td><button type="button" id="equals" value="=">=</button></td>
+      <td><button class="button" id="addition" type="button" name="addition" value="+">+</button></td>
+    </tr>
+  </table>
+</form>
+
+</table>
+
+<script src="main.js">
+</script>
 </body>
 
 </html>
