revised html, completed project

--- a/calculator.html
+++ b/calculator.html
@@ -32,7 +32,7 @@
       <td><button class="num" type="button" value="4">4</button></td>
       <td><button class="num" type="button" value="5">5</button></td>
       <td><button class="num" type="button" value="6">6</button></td>
-      <td><button class="num" id="multiplication" type="button" name="multiplication" value="*">*</button></td>
+      <td><button class="num" id="multiplyer" type="button" name="multiplyer" value="*">*</button></td>
     </tr>
 
 <!--Calculator buttons 1, 2, 3, -  -->
@@ -41,7 +41,7 @@
       <td><button class="num" type="button" value="1">1</button></td>
       <td><button class="num" type="button" value="2">2</button></td>
       <td><button class="num" type="button" value="3">3</button></td>
-      <td><button class="num" id="subtraction" type="button" name="subtraction" value="-">-</button></td>
+      <td><button class="num" id="subtractor" type="button" name="subtractor" value="-">-</button></td>
     </tr>
 
     <!--Calculator buttons 0, ., =, +  -->
@@ -50,7 +50,7 @@
       <td><button class="num" type="button" value="0">0</button></td>
       <td><button class="num" type="button" value=".">.</button></td>
       <td><button type="button" id="equals" value="=">=</button></td>
-      <td><button class="num" id="addition" type="button" name="addition" value="+">+</button></td>
+      <td><button class="num" id="add" type="button" name="add" value="+">+</button></td>
     </tr>
 
   </table>
